# utils-common

./: .travis.yml  CONTRIBUTING.md  README.md
.github/workflows/: build_and_test.yml  build_and_test_release_latest.yml  release_latest.repos  test.yml
aws_common/: CHANGELOG.rst  CMakeLists.txt  aws_commonConfig.cmake.in  package.xml
aws_common/awssdk/: CMakeLists.txt
aws_common/cmake/: DefineTestMacros.cmake
aws_common/include/aws_common/sdk_utils/: aws_error.h  client_configuration_provider.h  parameter_reader.h  throttling_manager.h
aws_common/include/aws_common/sdk_utils/auth/: service_credentials_provider.h
aws_common/include/aws_common/sdk_utils/logging/: aws_log_system.h
aws_common/src/fs_utils/: wordexp_ros.cpp
aws_common/src/sdk_utils/: aws_profile_provider.cpp  client_configuration_provider.cpp  parameter_path.cpp
aws_common/src/sdk_utils/auth/: service_credentials_provider.cpp
aws_common/src/sdk_utils/logging/: aws_log_system.cpp
aws_common/test/include/aws_common/sdk_utils/: parameter_reader_mock.h
aws_common/test/sdk_utils/: client_configuration_provider_test.cpp  throttling_manager_test.cpp
aws_common/test/sdk_utils/auth/: service_credentials_provider_test.cpp
aws_common/test/sdk_utils/logging/: aws_log_system_test.cpp
